<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="${relativePackage}.${activityClass}" xmlns:android1="http://schemas.android.com/apk/res/android">
    
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

	    <TextView
	        android:id="@+id/textViewDate"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_alignParentTop="true"
	        android:layout_centerHorizontal="true"
	        android:layout_marginTop="10dp"
	        android:text="@string/date" />
	
	    <Button
	        android:id="@+id/btnDate"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_below="@+id/textViewDate"
	        android:layout_centerHorizontal="true"
	        android:layout_marginTop="10dp"
	        android:text="@string/changer_date" />
	
		<TextView
		    android:id="@+id/textViewMotif"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:layout_marginTop="10dp"
		    android:layout_below="@+id/btnDate"
		    android:layout_centerHorizontal="true"
		    android:text="@string/motif" />
		
		<EditText
		    android:id="@+id/edtMotif"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:layout_below="@+id/textViewMotif"
		    android:layout_centerHorizontal="true"
		    android:ems="13"
		    android:layout_marginTop="10dp"
		    android:inputType="textFilter"
	        android:digits="@+string/filtrage_caracteres"
	        android:singleLine="true" >

			<requestFocus />

		</EditText>
		
		<Button
	        android:id="@+id/btnMotif"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_below="@+id/edtMotif"
	        android:layout_centerHorizontal="true"
	        android:layout_marginTop="10dp"
	        android:text="@string/choisir_motif_predefini" />

	    <TextView
	        android:id="@+id/textViewIntituleTrajet"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_below="@+id/btnMotif"
	        android:layout_centerHorizontal="true"
	        android:layout_marginTop="10dp"
	        android:text="@string/intitule_trajet" />
	
	    <EditText
	        android:id="@+id/edtIntituleTrajet"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_below="@id/textViewIntituleTrajet"
	        android:layout_centerHorizontal="true"
	        android:layout_marginTop="10dp"
	        android:ems="13"
	        android:inputType="textFilter"
        	android:digits="@+string/filtrage_caracteres"
        	android:singleLine="true" />
	
	    <TextView
	        android:id="@+id/textViewKm"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_below="@+id/edtIntituleTrajet"
	        android:layout_centerHorizontal="true"
	        android:layout_marginTop="10dp"
	        android:text="@string/kilometrage" />
	
	    <EditText
	        android:id="@+id/edtNbKm"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_below="@+id/textViewKm"
	        android:layout_centerHorizontal="true"
	        android:layout_marginTop="10dp"
	        android:ems="13"
	        android:inputType="numberDecimal"
	        android:text="@string/zero"
	        android:singleLine="true" />
	    
	    <TextView
	        android:id="@+id/textViewMontantPeage"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_below="@+id/edtNbKm"
	        android:layout_centerHorizontal="true"
	        android:layout_marginTop="10dp"
	        android:text="@string/montant_peage" />
	    
	    <EditText
	        android:id="@+id/edtMontantPeage"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_below="@+id/textViewMontantPeage"
	        android:layout_centerHorizontal="true"
	        android:layout_marginTop="10dp"
	        android:ems="13"
	        android:inputType="numberDecimal"
	        android:text="@string/zero"
	        android:singleLine="true" />
	    
	    <TextView
	        android:id="@+id/textViewMontantRepas"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_below="@+id/edtMontantPeage"
	        android:layout_centerHorizontal="true"
	        android:layout_marginTop="10dp"
	        android:text="@string/montant_repas" />
	    
	    <EditText
	        android:id="@+id/edtMontantRepas"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_below="@+id/textViewMontantRepas"
	        android:layout_centerHorizontal="true"
	        android:layout_marginTop="10dp"
	        android:ems="13"
	        android:inputType="numberDecimal"
	        android:text="@string/zero"
	        android:singleLine="true" />
	    
	    <TextView
	        android:id="@+id/textViewMontantHebergement"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_below="@+id/edtMontantRepas"
	        android:layout_centerHorizontal="true"
	        android:layout_marginTop="10dp"
	        android:text="@string/montant_hebergement" />
	    
	    <EditText
	        android:id="@+id/edtMontantHebergement"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_below="@+id/textViewMontantHebergement"
	        android:layout_centerHorizontal="true"
	        android:layout_marginTop="10dp"
	        android:ems="13"
	        android:inputType="numberDecimal"
	        android:text="@string/zero" />
	
		<Button
	        android:id="@+id/btnEnregistrer"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_below="@+id/edtMontantHebergement"
	        android:layout_centerHorizontal="true"
	        android:layout_marginTop="30dp"
	        android:text="@string/enregistrer" />
		
		</RelativeLayout>

</ScrollView>