<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="${relativePackage}.${activityClass}" >
    
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

	    <TextView
	        android:id="@+id/textViewNom"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_alignParentTop="true"
	        android:layout_centerHorizontal="true"
	        android:layout_marginTop="10dp"
	        android:text="@string/nom" />
	
	    <EditText
	        android:id="@+id/edtNom"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_below="@+id/textViewNom"
	        android:layout_centerHorizontal="true"
	        android:ems="13"
	        android:layout_marginTop="10dp"
	        android:inputType="textFilter"
	        android:digits="@+string/filtrage_caracteres"
	        android:singleLine="true" >

	        <requestFocus />

	    </EditText>

	    <TextView
	        android:id="@+id/textViewAdresse"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_marginTop="10dp"
	        android:layout_below="@+id/edtNom"
	        android:layout_centerHorizontal="true"
	        android:text="@string/adresse" />
	
	    <EditText
	        android:id="@+id/edtAdresse"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_below="@+id/textViewAdresse"
	        android:layout_centerHorizontal="true"
	        android:ems="13"
	        android:layout_marginTop="10dp"
	        android:inputType="textFilter"
        	android:digits="@+string/filtrage_caracteres_adresses"
        	android:singleLine="true" />
	
	    <TextView
	        android:id="@+id/textViewVille"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_below="@+id/edtAdresse"
	        android:layout_centerHorizontal="true"
	        android:layout_marginTop="10dp"
	        android:text="@string/ville" />
	
	    <EditText
	        android:id="@+id/edtVille"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_below="@id/textViewVille"
	        android:layout_centerHorizontal="true"
	        android:layout_marginTop="10dp"
	        android:ems="13"
	        android:inputType="textFilter"
	        android:digits="@+string/filtrage_caracteres"
	        android:singleLine="true" />
	
	    <TextView
	        android:id="@+id/textViewCp"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_below="@+id/edtVille"
	        android:layout_centerHorizontal="true"
	        android:layout_marginTop="10dp"
	        android:text="@string/cp" />
	
	    <EditText
	        android:id="@+id/edtCp"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_below="@+id/textViewCp"
	        android:layout_centerHorizontal="true"
	        android:layout_marginTop="10dp"
	        android:ems="13"
	        android:inputType="number" />
	
		<Button
	        android:id="@+id/btnEnregistrer"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_below="@+id/edtCp"
	        android:layout_centerHorizontal="true"
	        android:layout_marginTop="30dp"
	        android:text="@string/enregistrer" />

	</RelativeLayout>
	
</ScrollView>