<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="${relativePackage}.${activityClass}" >

    <ListView
        android:id="@+id/listViewAnnees"
        android:layout_above="@+id/relativeLayout1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true" />

	<RelativeLayout
        android:id="@+id/relativeLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:orientation="vertical" >

        <LinearLayout
            android:id="@+id/linearLayout1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <Button
                android:id="@+id/btnAjouterAnnee"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/ajouter" />

            <EditText
				android:id="@+id/edtAnnee"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_weight="1"
				android:ems="4"
				android:inputType="number" />
        	
        </LinearLayout>
        
        <RelativeLayout
            android:layout_below="@+id/linearLayout1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <CheckBox
                android:id="@+id/cboxDoitRembourser"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/remboursable" />

            <TextView
		        android:id="@+id/textViewAssociation"
		        android:layout_centerHorizontal="true"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:text="@string/pour" />
        	
        </RelativeLayout>
        
    </RelativeLayout>

</RelativeLayout>